add new brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,179 +1,43 @@
-tap "argoproj/tap"
-tap "aylei/tap"
-tap "azure/draft"
-tap "azure/functions"
-tap "bazelbuild/tap"
-tap "chef/chef"
-tap "d12frosted/emacs-plus"
-tap "derailed/k9s"
-tap "go-delve/delve"
 tap "homebrew/bundle"
 tap "homebrew/cask"
-tap "homebrew/cask-fonts"
-tap "homebrew/cask-versions"
 tap "homebrew/core"
-tap "homebrew/services"
-tap "koekeishiya/formulae"
-tap "solo-io/tap"
-tap "weaveworks/tap"
-tap "yudai/gotty"
-cask "java"
-cask "java11"
-brew "adr-tools"
-brew "libyaml"
-brew "openssl@1.1"
-brew "ansible"
-brew "aria2"
-brew "asciinema"
-brew "aspell"
-brew "automake"
-brew "awscli"
+tap "iina/mpv-iina"
+tap "kong/kong"
+brew "autojump"
 brew "azure-cli"
-brew "bash"
-brew "bat"
-brew "bfg"
-brew "gettext", link: true
-brew "gnutls"
-brew "cask"
-brew "ccat"
-brew "certbot"
-brew "cfssl"
-brew "cmake"
-brew "cntlm", restart_service: true
+brew "cassandra"
+brew "cocoapods"
 brew "coreutils"
-brew "corkscrew"
-brew "go"
-brew "dep"
-brew "direnv"
-brew "dive"
-brew "docker", link: false
-brew "docker-machine-driver-xhyve"
-brew "entr"
-brew "ghostscript"
-brew "exa"
-brew "fasd"
-brew "fd"
-brew "ffmpeg"
-brew "fpp"
+brew "docker-machine-driver-hyperkit"
 brew "fzf"
+brew "gcc"
 brew "git"
-brew "git-crypt"
-brew "git-flow"
-brew "git-lfs"
-brew "git-review"
-brew "glances"
-brew "gnu-tar"
-brew "gnupg", link: false
-brew "gradle"
+brew "gnu-typist"
 brew "graphviz"
-brew "hadolint"
-brew "helm"
-brew "hopenpgp-tools"
-brew "httpie"
-brew "hub"
-brew "hugo"
-brew "imagemagick"
-brew "ispell"
+brew "hyperkit", link: false
 brew "jq"
-brew "kotlin"
-brew "kubernetes-cli"
 brew "kubectx"
-brew "kubernetes-helm"
-brew "kubernetes-service-catalog-client"
-brew "kustomize"
-brew "libvterm"
-brew "libxml2"
-brew "luarocks"
-brew "maven"
-brew "mercurial"
-brew "ncdu"
-brew "nnn"
-brew "noti"
-brew "nvm"
-brew "texinfo"
-brew "openconnect"
-brew "socat"
+brew "minikube"
+brew "node"
 brew "openshift-cli"
-brew "packer"
-brew "pandoc"
-brew "peco"
-brew "pgcli"
-brew "proxychains-ng"
-brew "pulumi"
-brew "pyenv"
-brew "pyenv-virtualenv"
-brew "r"
-brew "rclone"
-brew "reattach-to-user-namespace"
-brew "rust"
-brew "smimesign"
-brew "terminal-notifier"
-brew "terraform"
-brew "the_silver_searcher"
-brew "tldr"
-brew "tmux"
-brew "urlview"
-brew "vault"
-brew "watchman"
-brew "wget"
-brew "xhyve", args: ["HEAD"]
-brew "xmlstarlet"
-brew "yarn"
-brew "ykpers"
-brew "ykman"
-brew "youtube-dl"
-brew "yq"
+brew "stern"
+brew "tfenv"
+brew "tig"
+brew "tree"
 brew "zsh"
-brew "aylei/tap/kubectl-debug"
-brew "azure/draft/draft"
-brew "azure/functions/azure-functions-core-tools"
-brew "bazelbuild/tap/bazel"
-brew "solo-io/tap/squashctl"
-brew "solo-io/tap/supergloo"
-brew "weaveworks/tap/eksctl"
-brew "yudai/gotty/gotty"
-cask "adobe-creative-cloud"
-cask "alfred2"
-cask "apache-directory-studio"
-cask "aquaterm"
+brew "kong/kong/kong"
+cask "adobe-acrobat-reader"
 cask "atom"
-cask "dash"
+cask "brave-browser"
 cask "docker"
-cask "dropbox"
-cask "emacs"
-cask "emacsclient"
+cask "evernote"
 cask "firefox"
-cask "firefox-nightly"
-cask "flux"
-cask "font-hack"
-cask "font-hack-nerd-font"
-cask "font-inconsolata"
-cask "font-inconsolata-for-powerline"
-cask "font-inconsolata-nerd-font"
-cask "font-source-code-pro"
-cask "font-source-code-pro-for-powerline"
+cask "franz"
 cask "google-chrome"
-cask "google-cloud-sdk"
-cask "google-photos-backup-and-sync"
-cask "gpg-suite"
-cask "hammerspoon"
-cask "insomnia"
-cask "intellij-idea"
 cask "iterm2"
-cask "kap"
-cask "karabiner-elements"
 cask "keycastr"
-cask "mactex"
-cask "microsoft-remote-desktop-beta"
-cask "minikube"
+cask "minishift"
 cask "notion"
 cask "postman"
-cask "powershell"
-cask "rstudio"
-cask "skype-for-business"
-cask "slack"
-cask "vagrant"
-cask "virtualbox"
-cask "visual-studio-code"
-cask "vlc"
-cask "chef/chef/inspec"
+cask "sourcetree"
+cask "spotify"
