brew file update

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -2,7 +2,6 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 tap "iina/mpv-iina"
-tap "kong/kong"
 brew "autojump"
 brew "azure-cli"
 brew "cassandra"
@@ -25,7 +24,6 @@ brew "tfenv"
 brew "tig"
 brew "tree"
 brew "zsh"
-brew "kong/kong/kong"
 cask "adobe-acrobat-reader"
 cask "atom"
 cask "brave-browser"
@@ -41,3 +39,5 @@ cask "notion"
 cask "postman"
 cask "sourcetree"
 cask "spotify"
+cask "visual-studio-code"
+cask "notion"
