updated brew file

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,10 +1,17 @@
+tap "golangci/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
+tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "iina/mpv-iina"
+tap "tilt-dev/tap"
 brew "autojump"
+brew "openssl@1.1"
+brew "python@3.8"
 brew "azure-cli"
+brew "glib"
 brew "cassandra"
+brew "cfssl"
 brew "cocoapods"
 brew "coreutils"
 brew "docker-machine-driver-hyperkit"
@@ -12,33 +19,65 @@ brew "fzf"
 brew "gcc"
 brew "git"
 brew "gnu-typist"
+brew "gnupg"
+brew "go"
+brew "gobject-introspection"
+brew "pango"
 brew "graphviz"
+brew "helm"
 brew "hyperkit", link: false
 brew "jq"
+brew "kafka"
+brew "librdkafka"
+brew "kafkacat"
 brew "kubectx"
 brew "minikube"
 brew "node"
+brew "openjdk"
 brew "openshift-cli"
+brew "pinentry-mac"
+brew "podman"
+brew "sops"
 brew "stern"
 brew "tfenv"
 brew "tig"
+brew "tmux"
 brew "tree"
+brew "watch"
+brew "wget"
 brew "zsh"
+brew "golangci/tap/golangci-lint"
+brew "tilt-dev/tap/tilt"
 cask "adobe-acrobat-reader"
+cask "adoptopenjdk8"
+cask "android-file-transfer"
 cask "atom"
 cask "brave-browser"
+cask "discord"
 cask "docker"
 cask "evernote"
 cask "firefox"
+cask "flycut"
 cask "franz"
 cask "google-chrome"
+cask "iina"
 cask "iterm2"
+cask "java"
 cask "keycastr"
+cask "lens"
 cask "minishift"
 cask "notion"
+cask "podman"
+cask "post-haste"
 cask "postman"
+cask "quitter"
+cask "rambox"
+cask "slack"
 cask "sourcetree"
 cask "spotify"
+cask "teamviewer"
+cask "vagrant"
+cask "virtualbox"
 cask "visual-studio-code"
 cask "notion"
 cask "slack"
